<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="5dp"
    android:background="@color/colorBackg"
    android:layout_weight="2">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@drawable/scroll"
        android:scrollbarSize="8dip"
        tools:ignore="MissingConstraints"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="20dp"
            android:background="@color/colorBackg"
            android:paddingLeft="10dp"
            android:paddingRight="20dp">



            <RelativeLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorBackg"
                android:backgroundTint="@color/colorBBackg"
                android:backgroundTintMode="src_atop"
                >

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/item_title_add_student"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    app:cardBackgroundColor="@color/colorTitle"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="30dp"
                    app:contentPadding="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/item_add_student"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingEnd="0dp"
                        android:text="@string/food_count"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="@dimen/textTitle"
                        android:textStyle="bold"
                        android:paddingLeft="15dp"
                        android:paddingRight="0dp" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardBackgroundColor="@color/colorHorizon"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp"
                    app:contentPaddingBottom="25dp"
                    app:contentPaddingLeft="15dp"
                    app:contentPaddingRight="15dp"
                    app:contentPaddingTop="40dp">

                    <HorizontalScrollView
                        android:id="@+id/hscrll1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:paddingBottom="10dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:background="@color/colorHorizon">

                        <TableLayout
                            android:id="@+id/table_display"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/cellshape"
                            >

                            <TableRow
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:background="@drawable/cellshape">

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/row_title_id"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="@string/id"
                                    android:textSize="@dimen/textNormal"
                                    android:padding="12dp"
                                    android:textColor="@color/colorTable"
                                    android:textStyle="bold"
                                    />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/row_title_name"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="@string/name"
                                    android:textSize="@dimen/textNormal"
                                    android:padding="12dp"
                                    android:textColor="@color/colorTable"
                                    android:textStyle="bold"
                                    />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/row_title_check"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="@string/check"
                                    android:textSize="@dimen/textNormal"
                                    android:padding="12dp"
                                    android:textColor="@color/colorTable"
                                    android:textStyle="bold"
                                    />

                            </TableRow>

                            <TableRow
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal">

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/row_break_fast_id"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="1"
                                    android:textSize="@dimen/textNormal"
                                    android:padding="12dp"
                                    android:textColor="@color/colorTable"
                                    />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/row_break_fast_name"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="Break Fast"
                                    android:textSize="@dimen/textNormal"
                                    android:textColor="@color/colorTable"
                                    android:padding="12dp"
                                    />

                                <com.google.android.material.checkbox.MaterialCheckBox
                                    android:id="@+id/checkbox_break_fast"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:buttonTint="@color/colorLightBlack"
                                    android:layout_marginLeft="5dp"
                                    android:checked="true"
                                    />

                            </TableRow>

                            <TableRow
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal">

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/row_lunch_id"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="2"
                                    android:textColor="@color/colorTable"
                                    android:textSize="@dimen/textNormal"
                                    android:padding="12dp"
                                    />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/row_lunch_name"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="Lunch"
                                    android:textSize="@dimen/textNormal"
                                    android:textColor="@color/colorTable"
                                    android:padding="12dp"
                                    />

                                <com.google.android.material.checkbox.MaterialCheckBox
                                    android:id="@+id/checkbox_lunch"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:buttonTint="@color/colorLightBlack"
                                    android:layout_marginLeft="5dp"
                                    android:checked="true"
                                    />

                            </TableRow>

                            <TableRow
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal">

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/row_dinner_id"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="3"
                                    android:textSize="@dimen/textNormal"
                                    android:textColor="@color/colorTable"
                                    android:padding="12dp"
                                    />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/row_dinner_name"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="Dinner"
                                    android:textSize="@dimen/textNormal"
                                    android:textColor="@color/colorTable"
                                    android:padding="12dp"
                                    />

                                <com.google.android.material.checkbox.MaterialCheckBox
                                    android:id="@+id/checkbox_dinner"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:buttonTint="@color/colorLightBlack"
                                    android:layout_marginLeft="5dp"
                                    android:checked="true"
                                    />

                            </TableRow>

                        </TableLayout>

                    </HorizontalScrollView>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/count_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/colorTitle"
                        android:textStyle="bold"
                        android:text="@string/submit"
                        android:textColor="@color/colorTextTitle"
                        android:layout_marginTop="265dp"/>

                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>